--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ a  {text-decoration: none; color: #343434;}
 
 
 .headerrow{padding: 50px 0px;}
-.row{width:1500px; display:flex; padding:30px 30px; margin: auto;}
+.row{ display:flex; padding:30px 30px; margin: auto;}
 
 .section-margin{margin-top: 180px;}
 
