--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cute</title>
+    <title>귀여움이 무기다(Baby Schema)</title>
+    <meta name="description" content="귀여움이 무기다는 서울과학기술대학교 2학기 과제전 작품으로 인간은 왜 귀여움을 느끼는가에 대한 페이지 입니다.">
+	
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://jujujupark.github.io/1214/">
+	<meta property="og:image" content="thumbnail.jpg">
+	<meta property="og:title" content="귀여움이 무기다(Baby Schema)">
+	<meta property="og:description" content="귀여움이 무기다는 서울과학기술대학교 2학기 과제전 작품으로 간단한 테스트를 통해 당신의 숨겨진 성격을 알아보는 재미있는 심리테스트입니다.">
+
     <link rel="stylesheet" href="https://use.typekit.net/wij6aur.css">
 */spin/*
    
@@ -39,6 +47,16 @@
     font-style: normal;
 }
 
+@font-face {
+            font-family: 'GmarketSansBold';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;}
+        @font-face {
+            font-family: 'GmarketSansMedium';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;}   
 
 
 
