--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@ a  {text-decoration: none; color: #343434;}
 .definition_right{font-family:GmarketSansbold; font-size: 1.8em; padding-left: 50px; line-height: 1.2; letter-spacing: 0.1em;
     color: #ff00ff;;}
 
-.hanja{ font-size: 18em; color: black; left; letter-spacing: 0.2em;} 
-.chinese{font-size: 0.3em; }
+.hanja{ font-size: 18em; color: black; left; letter-spacing: 0.2em; font-family:GmarketSansbold;} 
+.chinese{font-size: 0.3em; font-family:GmarketSansbold; }
 
 .tinytext{font-size: 0.8em; line-height: 1.6em;letter-spacing: 0em; color: black;}
 .smalltext{ font-size: 1.3em; line-height: 1.4em;letter-spacing: 0.1em;
