--- a/index.html
+++ b/index.html
@@ -423,11 +423,11 @@ h3{font-family: narly; font-weight: 700;}
 <section class="">
      <div class="mainrow j_top ">
         <div class="col-3">
-        <img class="w3-grayscale-max" style="position: absolute; width: 30%; top:100px; left:0; " src="text6.jpg">
+        <img class="w3-grayscale-max" src="text6.jpg">
     </div>
-        <div class="col-70p"><p class="maintext text-stroke">아기 스키마가 높으면 상대방 으로부터 보호 및 부양 행동을<br> 촉진시키는 반면에 공격성은 낮추는 것으로 잘 알려져 있다.<br><br>
+        <div class="col-70p"><p class="maintext text-stroke" style="padding-left: 100px;">아기 스키마가 높으면 상대방 으로부터 <br>보호 및 부양 행동을 촉진시키는 반면에<br> 공격성은 낮추는 것으로 잘 알려져 있다.<br><br>
 
-일정 시간 동안 어미의 보호 없이는 살 수 없는 포유류나 조류는 양육 행동을 불러 일으키는 모습으로 태어남으로써 어렸을 때에 어미나 개체군의 다른 성체로부터 보호를 받게 된다.</p>
+일정 시간 동안 어미의 보호 없이는 살 수 없는<br>  포유류나 조류는 양육 행동을 불러 일으키는<br>  모습으로 태어남으로써 어렸을 때에 어미나<br>  개체군의 다른 성체로부터 보호를 받게 된다.</p>
 </div>
     </div>
 </section>
