--- a/index.html
+++ b/index.html
@@ -561,9 +561,9 @@ h3{font-family: narly; font-weight: 700;}
 <section class="">
     <div class="row">
         <div class="col-2">
-            <p class="maintext text-stroke">한 유튜브 영상에서는 국내 아이돌의 애교 영상을 본 외국인들의 반응을 보여주었다. 연출자가 외국인에게 <strong class="f_pink ">“본인 국가에도 ‘애교’라는 개념이 있어요?”</strong>라고 묻자 애교 문화의 부재를 밝혔다. 본격적으로 아이돌의 애교 영상을 시청했을 때, 대부분은 당혹스러움을 감추지 못했다. 심지어 테이블을 엎어버리고 싶다며 과격한 반응을 보이기도 하며 새로운 문화를 흥미롭게 바라봤다.
+             <p class="maintext text-stroke">한 유튜브 영상에서는 국내 아이돌의 애교<br> 영상을 본 외국인들의 반응을 보여주었다.<br> 연출자가 <strong class="f_pink ">“본인 국가에도 ‘애교’라는 개념이<br> 있어요?”</strong>라고 묻자 애교 문화의 부재를 밝혔다.<br>본격적으로 아이돌의 애교 영상을 시청했을 때,<br> 대부분은 당혹스러움을 감추지 못했다. 심지어<br> 테이블을 엎어버리고 싶다며 과격한 반응을<br> 보이기도 하며 새로운 문화를 흥미롭게 바라봤다.
 <br><br>
-한 방송에서 <strong class="f_pink ">캐나다 출신 외국인 연예인 0000씨는 한국에 와서 가장 적응되지 않았던 문화가 애교</strong>라고 말했다. 애교는 아기들만 하는 것이라고 언급해 문화 차이를 체감할 수 있다.</p></div>
+한 방송에서 <strong class="f_pink ">캐나다 출신 외국인 연예인 0000<br>씨는 한국에 와서 가장 적응되지 않았던 문화가<br> 애교</strong>라고 말했다. 애교는 아기들만 하는 것이라<br>고 언급해 문화 차이를 체감할 수 있다.</p></div>
          <div class="col-2">
            <iframe class="" width="560" height="315" src="https://www.youtube.com/embed/pvHpnnchxHQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
