--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:url" content="https://jujujupark.github.io/1214/">
 	<meta property="og:image" content="thumbnail.jpg">
 	<meta property="og:title" content="귀여움이 무기다(Baby Schema)">
-	<meta property="og:description" content="귀여움이 무기다는 서울과학기술대학교 2학기 과제전 작품으로 간단한 테스트를 통해 당신의 숨겨진 성격을 알아보는 재미있는 심리테스트입니다.">
+	<meta property="og:description" content="귀여움이 무기다는 서울과학기술대학교 2학기 과제전 작품으로 인간은 왜 귀여움을 느끼는가에 대한 페이지 입니다.">
 
     <link rel="stylesheet" href="https://use.typekit.net/wij6aur.css">
 */spin/*
@@ -583,7 +583,7 @@ h3{font-family: narly; font-weight: 700;}
 <section class="">
     <div class="row">
         <div class="col-3">
-            <p class="smalltext f_white text-stroke ">영어권 나라에는 애교라는 개념 자체가 존재하지 않는다. 따라서 애교를 뜻하는 영단어도 없다. 외국인들은 이를 대체할 단어가 없어 [Aegyo]라고 표기한다. <br>서양에서는 ‘귀엽다’라는 개념이 아기나 동물에게만 사용되기 때문이다. 그래서 카와이나 귀여움은 매력어필보단<br> 밈의 개념으로 활용된다.</p>
+            <p class="smalltext f_white text-stroke ">영어권 나라에는 애교라는 개념 자체가<br> 존재하지 않는다. 따라서 애교를 뜻하는<br> 영단어도 없다. 외국인들은 이를 대체할<br> 단어가 없어 [Aegyo]라고 표기한다. <br>서양에서는 ‘귀엽다’라는 개념이 아기나<br> 동물에게만 사용되기 때문이다. 그래서<br> 카와이나 귀여움은 매력어필보단<br> 밈의 개념으로 활용된다.</p>
            <div class="j_top">
             <img class="rotate" src="sweater.jpg"></div>
         </div>
@@ -604,8 +604,7 @@ h3{font-family: narly; font-weight: 700;}
             <img class="j_top" src="papa2.gif"></div>
         <div class="col-2 "><img src="metal.jpeg">
             <iframe class="j_top" width=100% height=40% src="https://www.youtube.com/embed/M8-vje-bq9c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <p class=" j_top smalltext f_white text-stroke" >팝메탈 밴드 <레이디베이비>의 보는 것만으로도 힘이 되어버리는.<br>호주에서 온 치유계 아저씨로 소개되어 있는 '레이디비어드'씨. "노래를 부르는 동안 최대한 사랑스럽게 보이려고 노력하죠."라고 말했다.<br>이 호주에서 온 수염 사나이가 파괴적인 외모와 극강의 귀여움 사이에 만든 혼돈의 우주안에 당신의 영혼을 가둘 것이다.<br>/허핑턴포스트코리아</p>
-
+             <p class=" j_top smalltext f_white text-stroke" >팝메탈 밴드 <레이디베이비>의 보는 것만으로도 힘이 되어버리는.<br>호주에서 온 치유계 아저씨로 소개되어 있는 '레이디비어드'씨. <br>"노래를 부르는 동안 최대한 사랑스럽게 보이려고 노력하죠."<br>라 말했다. 이 호주에서 온 수염 사나이가 파괴적인 외모와 극강의 <br>귀여움 사이에 만든 혼돈의 우주안에 당신의 영혼을 가둘 것이다.<br>/허핑턴포스트코리아</p>
         </div>
      
         <div class="col-3">
@@ -705,8 +704,9 @@ h3{font-family: narly; font-weight: 700;}
         <div class="row">
             <div class="col-2"><p class="maintext3 f_white text-stroke">
                 봐주셔서<br> 감사합니다.
-            </p></div>
-            <div class="col-2"><img style="width:50%; padding-left:200px;" src="thank.gif"></div>
+            </p>
+            <p class="smalltext f_white text-stroke">귀여움이 무기다(Baby Schema)는<br> 2020년도 서울과학기술대학교 UX디자인심화<br> 프로젝트 및 과제전 작품으로 개인 창작물 입니다.<br> 사용된 이미지의 저작권은 각 저작자에게 있습니다. </p></div>
+            <div class="col-2"><img style="width:70%; padding-left:200px;" src="thank.gif"></div>
         </div>
     </section>
 
