--- a/index.html
+++ b/index.html
@@ -704,14 +704,15 @@ h3{font-family: narly; font-weight: 700;}
             <div class="col-2"><p class="maintext3 f_white text-stroke">
                 봐주셔서<br> 감사합니다.
             </p>
-            <p class="smalltext f_white text-stroke">귀여움이 무기다(Baby Schema)는<br> 2020년도 서울과학기술대학교 UX디자인심화<br> 프로젝트 및 과제전 작품으로 개인 창작물 입니다.<br> 사용된 이미지의 저작권은 각 저작자에게 있습니다. </p></div>
+            <p class="smalltext f_white text-stroke" style="padding-top: 20px;">귀여움이 무기다(Baby Schema)는<br> 2020년도 서울과학기술대학교 UX디자인심화<br> 프로젝트 및 과제전 작품으로 개인 창작물 입니다.<br> 사용된 이미지의 저작권은 각 저작자에게 있습니다. </p></div>
             <div class="col-2"><img style="width:70%; padding-left:200px;" src="thank.gif"></div>
         </div>
     </section>
 
 <footer class="section-margin">
-    <div class="maintext2 f_yellow text-stroke center" style="font-family: narly;">
-        COPYRIGHT © JUYEON PARK ALL RIGHTS RESERVED.
+    <div class="maintext2 f_yellow text-stroke center" style="font-family: narly; line-height: 1.5;">
+        DESIGN COPYRIGHT © JUYEON PARK ALL RIGHTS RESERVED.
+	<br>2020.12.16
     </div>
 
 </footer>
