--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ h3{font-family: narly; font-weight: 700;}
             
         </div>
     <div class="col-2">
-            <h1 class="hanja right">-圖解</h1></div>
+            <h1 class="hanja right">-圖<br>解</h1></div>
     </div></div></section>
 <section class="yellow">
      <div class="mainrow j_top ">
