--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ a  {text-decoration: none; color: #343434;}
 .definition_right{font-family:GmarketSansbold; font-size: 1.8em; padding-left: 50px; line-height: 1.2; letter-spacing: 0.1em;
     color: #ff00ff;;}
 
-.hanja{ font-size: 18em; color: black; left; letter-spacing: 0.2em; font-family:GmarketSansbold;} 
+.hanja{ font-size: 18em; color: black; left; letter-spacing: 0.1em; font-family:GmarketSansbold;} 
 .chinese{font-size: 0.3em; font-family:GmarketSansbold; }
 
 .tinytext{font-size: 0.8em; line-height: 1.6em;letter-spacing: 0em; color: black;}
@@ -391,16 +391,16 @@ h3{font-family: narly; font-weight: 700;}
      <div class="mainrow j_top ">
         <div class="col-2">
             <p class="maintext text-stroke ">영국 과학잡지 [How It Works]<br><br>
-            인간은 포유류 새끼들이 공통적으로<br>가지는 외양적 특징을 목격하면 본능적으로 
+            인간은 포유류 새끼들이 공통적으로<br>가진 외양적 특징을 목격하면 본능적으로 
             <br>‘귀여움’을 느낀다. 이러한 외모 특징을 
-            <br>‘유아도해’ (baby schema/幼兒圖解)<br>라고 일컫는다.</p> 
+            <br>[유아도해] (baby schema/幼兒圖解)<br>라고 일컫는다.</p> 
         </div>
          <div class="col-4 absloute"><p class="maintext text-stroke">{1}</p>
-        <img style=" width: 100%; top:0px;  z-index:2; " src="text8.jpg">
+        <img class="center" style=" width: 100%; top:0px;  z-index:2; " src="text8.jpg">
     </div>
     
     <div class="col-4 absloute"><p class="maintext text-stroke">{2}</p>
-        <img  style=" width: 100%; top:0px;  z-index:2; " src="text5.png">
+        <img class="center" style=" width: 100%; top:0px;  z-index:2;  padding" src="text5.png">
     </div>    
     </div>
     </div>
