--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ h3{font-family: narly; font-weight: 700;}
     <div class="row">
         <div class="col-3">
  <p class="maintext text-stroke">
-국내 캐릭터 산업 시장은 8조원대 규모까지 성장했다. 이순종 서울대 미대학장은 "완만한 선, 부드럽고 통통한 느낌은 보는 사람에게 친밀감과 따뜻함을 전해준다"며 "귀여움을 극대화하는 것이 캐릭터 산업의 전략"이라고 했다.<br><img class="textimg2" src="disney.png">는 만화가들 책상에 "귀여움을 유지하라 Keep it cute!"라는 메모를 붙여뒀다.</p></div>
+국내 캐릭터 산업 시장은 8조원대 규모까지 성장했다. 이순종 서울대 미대학장은 "완만한 선, 부드럽고 통통한 느낌은 보는 사람에게 친밀감과 따뜻함을 전해준다"며 "귀여움을 극대화하는 것이 캐릭터 산업의 전략"이라고 했다.<br><img class="textimg2" src="disney.png">는 만화가들 책상에<br>"귀여움을 유지하라 Keep it cute!"라는 메모를 붙여뒀다.</p></div>
 
 <div class="col-70p">
 <div class="roll "><marquee ><h3 class="text-stroke"> KEEP IT CUTE ! KEEP IT CUTE  KEEP IT CUTE ! KEEP IT CUTE ! KEEP IT CUTE ! KEEP IT CUTE!</h3></marquee></div>
