--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ h3{font-family: narly; font-weight: 700;}
             <img class="j_top" src="papa2.gif"></div>
         <div class="col-2 "><img src="metal.jpeg">
             <iframe class="j_top" width=100% height=40% src="https://www.youtube.com/embed/M8-vje-bq9c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-             <p class=" j_top smalltext f_white text-stroke" >팝메탈 밴드 <레이디베이비>의 보는 것만으로도 힘이 되어버리는.<br>호주에서 온 치유계 아저씨로 소개되어 있는 '레이디비어드'씨. <br>"노래를 부르는 동안 최대한 사랑스럽게 보이려고 노력하죠."<br>라 말했다. 이 호주에서 온 수염 사나이가 파괴적인 외모와 극강의 <br>귀여움 사이에 만든 혼돈의 우주안에 당신의 영혼을 가둘 것이다.<br>/허핑턴포스트코리아</p>
+             <p class=" j_top smalltext f_white text-stroke" >팝메탈 밴드 <레이디베이비>의 보는 것만으로도 힘이 되어버리는<br>호주에서 온 치유계 아저씨로 소개되어 있는 '레이디비어드'씨. <br>"노래를 부르는 동안 최대한 사랑스럽게 보이려고 노력하죠."<br>라 말했다. 이 호주에서 온 수염 사나이가 파괴적인 외모와 극강의 <br>귀여움 사이에 만든 혼돈의 우주안에 당신의 영혼을 가둘 것이다.<br>/허핑턴포스트코리아</p>
         </div>
      
         <div class="col-3">
@@ -617,7 +617,7 @@ h3{font-family: narly; font-weight: 700;}
 <section class="section-margin">
      <div class="row">
         <div class="tag">         
-            <a>SPECIAL - LET'S PRACTICE! - QUOTES IN K-MEDIA</a>
+            <a>SPECIAL - LET'S PRACTICE ! - QUOTES IN K-MEDIA</a>
         </div></div></section>
 
 <section>
