--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ h3{font-family: narly; font-weight: 700;}
 <footer class="section-margin">
     <div class="maintext2 f_yellow text-stroke center" style="font-family: narly; line-height: 1.5;">
         DESIGN COPYRIGHT © JUYEON PARK ALL RIGHTS RESERVED.<br>
-	    Juyeon Park : qkrwndus9979@gmail.com, https://www.behance.net/StarDie
+	    Juyeon Park : https://www.behance.net/StarDie
 	<br>2020.12.16.
     </div>
 
