--- a/index.html
+++ b/index.html
@@ -544,7 +544,8 @@ h3{font-family: narly; font-weight: 700;}
 <section class="pink">
     <div class="row">
         <div class="col-1">
-            <p class="maintext text-stroke center">애교(愛嬌) : 귀여운 아기목소리, 얼굴 표정, 몸짓 등을 통해
+            <p class="maintext text-stroke center">K-드립 : K-POP 흥행 이후 '자랑스러운 한국산'임을 나타내기 위해 <br>'K-'를 붙이는 현상이 과해져 meme화함. 예) K-방역, K-장녀, K-말벌<br>
+                <br>애교(愛嬌) : 귀여운 아기목소리, 얼굴 표정, 몸짓 등을 통해
 애정을 표현하는 행동.
                 </p>
         </div>
