--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>귀여움이 무기다(Baby Schema)</title>
-    <meta name="description" content="귀여움이 무기다는 서울과학기술대학교 2학기 과제전 작품으로 인간은 왜 귀여움을 느끼는가에 대한 페이지 입니다.">
+    <meta name="description" content="귀여움이 무기다(Baby Schema)는 서울과학기술대학교 2학기 과제전 작품으로 '인간은 왜 귀여움을 느끼는가'에 대한 페이지 입니다.">
 	
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://jujujupark.github.io/1214/">
 	<meta property="og:image" content="thumbnail.jpg">
 	<meta property="og:title" content="귀여움이 무기다(Baby Schema)">
-	<meta property="og:description" content="귀여움이 무기다는 서울과학기술대학교 2학기 과제전 작품으로 인간은 왜 귀여움을 느끼는가에 대한 페이지 입니다.">
+	<meta property="og:description" content="귀여움이 무기다(Baby Schema)는 서울과학기술대학교 2학기 과제전 작품으로 '인간은 왜 귀여움을 느끼는가'에 대한 페이지 입니다.">
 
     <link rel="stylesheet" href="https://use.typekit.net/wij6aur.css">
 
