--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ h3{font-family: narly; font-weight: 700;}
     <div class="row">
         <div class="col-1">
             <p class="charactor_text text-stroke">{1}<br>캐릭터 분야가 대표적이다.
-                러버덕<img class="textimg2" src="duck.gif">미키마우스<img class="textimg2" src="mouse.gif">곰돌이 푸<img class="textimg2" src="pooh.gif">라이언<img class="textimg2" src="ryan.gif">헬로키티<img class="textimg2" src="kitty.gif">피카추<img class="textimg2" src="pikapika.gif">푸린<img class="textimg2" src="dizi.gif">햄토리<img class="textimg2" src="ham.gif">별의 커비<img class="textimg2" src="star.gif">등, 귀여움은 곧 경쟁력이다.</p></div></div></section>
+                러버덕<img class="textimg2" src="duck.gif">미키마우스<img class="textimg2" src="mouse.gif">곰돌이 푸<img class="textimg2" src="pooh.gif">라이언<img class="textimg2" src="ryan2.gif">헬로키티<img class="textimg2" src="kitty.gif">피카추<img class="textimg2" src="pikapika.gif">푸린<img class="textimg2" src="dizi.gif">햄토리<img class="textimg2" src="ham.gif">별의 커비<img class="textimg2" src="star.gif">등, 귀여움은 곧 경쟁력이다.</p></div></div></section>
 
 <section class="">
     <div class="row">
