--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ h3{font-family: narly; font-weight: 700;}
         <div class="row" style="height:700px">
             <div class="absolute" style="left:400px; top:200px;">
 
-                <p class=" black f_white maintext2 center ">빈칸에 공통적으로 알맞은 말을 넣어보시오.(3점)</p>
+                <p class=" black f_white maintext2 center ">빈칸에 공통적으로 알맞은 말을 넣어보시오.(3점)<br> 방법 : 좌측의 단어를 빈칸에 드래그한 후 하단에 정답 확인</p>
                 <div class="j_top">
                 <p class="maintext3 f_yellow text-stroke">나 ____버거 먹고 시퍼요. <br>
                     나 ____ 대따 조아하는거 알지?<br>나눈 ____ 두쟝~♡</h2></p></div>
